Fix alignment of black-letter days

--- a/app/src/app/shared/liturgy-select/liturgy-select.component.scss
+++ b/app/src/app/shared/liturgy-select/liturgy-select.component.scss
@@ -4,7 +4,14 @@
 
 ul.feasts {
   list-style-type: none;
-  padding-left: 1em;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+
+  li {
+    display: block;
+    margin: auto;
+  }
 }
 
 .pray-buttons {
